fix: gnoweb UI styles (#3349)
This PR aims to fix some of remaining UI bugs on gnoweb after the revamp
merge.

Some of: #3355

- Fixes Safari select input design and icons
- Fixes input hover
- Fixes ToC font style
- Fixes UI details and improve CSS
- Fixes Responsive with long content
- Fixes Scrollbar
- Fixes fonts loading strategy and size
- Fixes ts issue with copy btn (quick clicks)
- Fixes some A11y

--- a/gno.land/pkg/gnoweb/frontend/css/input.css
+++ b/gno.land/pkg/gnoweb/frontend/css/input.css
@@ -9,9 +9,9 @@
 @font-face {
   font-family: "Inter var";
   font-weight: 100 900;
-  font-display: swap;
+  font-display: block;
   font-style: oblique 0deg 10deg;
-  src: url("./fonts/intervar/Inter.var.woff2") format("woff2");
+  src: url("./fonts/intervar/Intervar.woff2") format("woff2");
 }
 
 @tailwind base;
@@ -20,7 +20,7 @@
 
 @layer base {
   html {
-    @apply font-interNormal text-gray-600 bg-light text-200;
+    @apply font-interVar text-gray-600 bg-light text-200;
     font-feature-settings: "kern" on, "liga" on, "calt" on, "zero" on;
     -webkit-font-feature-settings: "kern" on, "liga" on, "calt" on, "zero" on;
     text-size-adjust: 100%;
@@ -29,13 +29,6 @@
     font-variant-ligatures: contextual common-ligatures;
     font-kerning: normal;
     text-rendering: optimizeLegibility;
-    overflow-x: hidden;
-  }
-
-  @supports (font-variation-settings: normal) {
-    html {
-      @apply font-interVar;
-    }
   }
 
   svg {
@@ -47,7 +40,11 @@
   }
 
   .realm-content {
-    @apply text-200;
+    @apply text-200 break-words pt-10;
+  }
+
+  .realm-content > *:first-child {
+    @apply !mt-0;
   }
 
   .realm-content a {
@@ -58,7 +55,7 @@
   .realm-content h2,
   .realm-content h3,
   .realm-content h4 {
-    @apply text-gray-900 mt-8 leading-tight;
+    @apply text-gray-900 mt-12 leading-tight;
   }
 
   .realm-content h2,
@@ -76,7 +73,7 @@
   .realm-content h1 + h2,
   .realm-content h2 + h3,
   .realm-content h3 + h4 {
-    @apply mt-1.5;
+    @apply mt-4;
   }
 
   .realm-content h1 {
@@ -88,15 +85,15 @@
   }
 
   .realm-content h3 {
-    @apply text-400 text-gray-600 mt-6;
+    @apply text-400 text-gray-600 mt-10;
   }
 
   .realm-content h4 {
-    @apply text-300 text-gray-600 font-medium my-4;
+    @apply text-300 text-gray-600 font-medium my-6;
   }
 
   .realm-content p {
-    @apply my-4;
+    @apply my-5;
   }
 
   .realm-content strong {
@@ -117,16 +114,16 @@
 
   .realm-content ul,
   .realm-content ol {
-    @apply pl-4 my-4;
+    @apply pl-4 my-6;
   }
 
   .realm-content ul li,
   .realm-content ol li {
-    @apply mb-1;
+    @apply mb-2;
   }
 
   .realm-content img {
-    @apply max-w-full my-6;
+    @apply max-w-full my-8;
   }
 
   .realm-content figure {
@@ -146,11 +143,11 @@
   }
 
   .realm-content hr {
-    @apply border-t border-gray-100 my-8;
+    @apply border-t border-gray-100 my-10;
   }
 
   .realm-content table {
-    @apply w-full border-collapse my-6;
+    @apply w-full border-collapse my-8;
   }
 
   .realm-content th,
@@ -182,7 +179,7 @@
   .realm-content ul ol,
   .realm-content ol ul,
   .realm-content ol ol {
-    @apply mt-2 mb-2 pl-4;
+    @apply mt-3 mb-2 pl-4;
   }
 
   .realm-content ul {
@@ -208,7 +205,7 @@
   }
 
   .realm-content details {
-    @apply my-4;
+    @apply my-5;
   }
 
   .realm-content summary {
@@ -220,7 +217,7 @@
   }
 
   .realm-content video {
-    @apply max-w-full my-6;
+    @apply max-w-full my-8;
   }
 
   .realm-content math {
@@ -267,14 +264,11 @@
   }
 
   /* toc */
-  .toc-expend-btn {
-    @apply after:content-['open'] after:font-normal after:text-100 lg:after:content-none;
-  }
-  .toc-expend-btn:has(#toc-expend:checked) {
-    @apply after:content-['close'] lg:after:content-none;
-  }
   .toc-expend-btn:has(#toc-expend:checked) + nav {
     @apply block;
+  }
+  .toc-expend-btn:has(#toc-expend:checked) .toc-expend-btn_ico {
+    @apply rotate-180;
   }
 
   /* sidebar */
